--- a/film-service/film-service/pom.xml
+++ b/film-service/film-service/pom.xml
@@ -85,6 +85,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-context</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
     </dependencies>
 
 	<dependencyManagement>
